# mnist_accel

./: .gitignore  README.md
inference/: README.md  numpy_inference.py
inference/c/: CMakeLists.txt  main.c  matmul_base.c  matmul_neon.c  network.c
inference/c/src/: imatmul.h  main.c  matmul_base.c  matmul_neon.c  matmul_neon.h  network.c  network.h  perf_inst.c  perf_inst.h
inference/data/: default.pt
inference/python/: image_loader.py  numpy_inference.py
training/: README.md  dump_bytes.py  main.py  network.py
